--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    testImplementation 'junit:junit:4.12'
+
 }
